--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </style>
 </head>
 <body>
-    <h1>💀 Mentira, no sabemos cómo hacer esto 💀</h1>
-    <p>Pero apreciamos tu entusiasmo. ¡Sigue buscando respuestas, algún día las encontrarás! 😆</p>
+    <h1>💀 Mentira, no sabemos cómo hacer esto XDDD 💀</h1>
+    <p>Es mas ni se como funcionaria, apenas y se creo esto ajjajaja :^ </p>
 </body>
 </html>
