--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>💀 Mentira, no sabemos cómo hacer esto XDDD 💀</h1>
-    <p>Es mas ni se como funcionaria, apenas y se creo esto ajjajaja :^ </p>
+    <p>Es mas ni se como funcionaria, apenas y se creo esto ajjajaja :^. </p>
 </body>
 </html>
